--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <div class="logo-container">
+                    <img src="./assets/images/logo.png" alt="Logo-Icon" class="logo-icon">
+                    <h3 class="logo-text">Prithibi <span class="travel-word"><span class="travel-word">Travel</span></h3>
+                </div>
+            </div>
+            <div class="nav-routing">
+                <ul class="rout-text">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Package</a></li>
+                    <li><a href="#">Tesimonial</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="hamburger-button">
+                <button class="hamburger"><i class="fa-solid fa-bars"></i></button>
+            </div>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
