--- a/index.html
+++ b/index.html
@@ -30,7 +30,36 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="hero-section">
+            <div class="hero-container">
+                <h1 class="hero-heading">Explore Your Travel</h1>
+                <p class="hero-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio<br>enim ac quis sapien urna eu phasellus.</p>
+                <div class="hero-input-container">
+                    <div class="hero-input">
+                        <form action="">
+                            <input class="hero-bars" type="text" name="" id="" placeholder="Where go">
+                            <select class="hero-bars" name="" id="">
+                                <option value="When">When</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                            <select class="hero-bars" name="" id="">
+                                <option value="Select Type">Select Type</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                            <input class="hero-bars orange-bar" type="submit" value="Find Now">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
