hero-section created and responsive done

--- a/index.html
+++ b/index.html
@@ -33,29 +33,21 @@
     <main>
         <section class="hero-section">
             <div class="hero-container">
-                <h1 class="hero-heading">Explore Your Travel</h1>
-                <p class="hero-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio<br>enim ac quis sapien urna eu phasellus.</p>
-                <div class="hero-input-container">
-                    <div class="hero-input">
-                        <form action="">
-                            <input class="hero-bars" type="text" name="" id="" placeholder="Where go">
-                            <select class="hero-bars" name="" id="">
-                                <option value="When">When</option>
-                                <option value=""></option>
-                                <option value=""></option>
-                                <option value=""></option>
-                                <option value=""></option>
-                            </select>
-                            <select class="hero-bars" name="" id="">
-                                <option value="Select Type">Select Type</option>
-                                <option value=""></option>
-                                <option value=""></option>
-                                <option value=""></option>
-                                <option value=""></option>
-                            </select>
-                            <input class="hero-bars orange-bar" type="submit" value="Find Now">
-                        </form>
-                    </div>
+                <div class="hero-text">
+                    <h1 class="hero-heading">Explore Your Travel</h1>
+                    <p class="hero-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio<br>enim ac quis sapien urna eu phasellus.</p>
+                </div>
+                <div class="hero-input">
+                    <form action="">
+                        <input class="hero-bars" type="text" name="" id="" placeholder="Where To Go">
+                        <select class="hero-bars" name="" id="" class="time">
+                            <option value="">When</option>
+                        </select>
+                        <select class="hero-bars" name="" id="" class="type">
+                            <option value="">Select Type</option>
+                        </select>
+                        <input class="hero-bars find-now-btn" type="submit" value="Find Now">
+                    </form>
                 </div>
             </div>
         </section>
