--- a/index.html
+++ b/index.html
@@ -51,6 +51,32 @@
                 </div>
             </div>
         </section>
+        <section class="popular-tour">
+            <div class="popular-tour-text">
+                <h2 class="popular-tour-heading">Our Popular Tours</h2>
+                <div class="popular-description">
+                    <p class="popular-tour-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit<br>massa. Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+                <ul class="popular-tour-list">
+                    <li>
+                        <p class="des1 des">Tempus euismod lacus mauris dignissim quis in ultrices. Magna<br>nullam odio neque diam. Sociis erat at .</p>
+                    </li>
+                    <li>
+                        <p class="des2 des">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea<br>porta lacus. Lectus suspendisse nullam.</p>
+                    </li>
+                    <li>
+                        <p class="des3 des"> Accumsan eget et turpis praesent lorem egestas enim elit<br>bibendum. Risus at in.</p>
+                    </li>
+                </ul>
+                <div class="popular-description">
+                    <p class="popular-tour-description">Amet consectetur. Vulputate commodo felis molestie risus<br>ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br>Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus<br>semper tincidunt. </p>
+                </div>
+                <div class="read-more"><button class="read-more-btn">Read More</button></div>
+            </div>
+            <div class="popular-tour-image">
+                <img src="./assets/images/mountain.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
