Destination part responsive and creation done

--- a/index.html
+++ b/index.html
@@ -77,6 +77,30 @@
                 <img src="./assets/images/mountain.png" alt="">
             </div>
         </section>
+        
+        <section class="destination">
+            <div class="destination-container">
+                <h2 class="destination-heading">Choose Your Destination</h2>
+                <div class="heading-dest">
+                    <p class="destination-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.<br>Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+                <div class="destination-image-container">
+                    <div class="dest-part1">
+                        <div class="bg maldives"><h3 class="dest-heading">Maldives</h3></div>
+                        <div class="bg indonesia"><h3 class="dest-heading">Indonesia</h3></div>
+                    </div>
+                    <div class="dest-part2">
+                        <div class="bg srilanka"><h3 class="dest-heading">Srilanka</h3></div>
+                        <div class="bg north-america"><h3 class="dest-heading">North-America</h3></div>
+                        <div class="bg kashmir"><h3 class="dest-heading">Kashmir</h3></div>
+                    </div>
+                    <div class="dest-part3">
+                        <div class="bg bangladesh"><h3 class="dest-heading">Bangladesh</h3></div>
+                        <div class="bg bandorban"><h3 class="dest-heading">Bandorban</h3></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
