--- a/index.html
+++ b/index.html
@@ -101,6 +101,41 @@
                 </div>
             </div>
         </section>
+        <section class="choosing-reason">
+            <div class="choosing-reason-text">
+                <h2 class="choosing-heading">Why Choose Us</h2>
+                <div class="description-choose">
+                    <p class="choosing-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.<br>Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+            </div>
+            <div class="choose-container">
+                <div class="choose-upper-container">
+                    <div class="choose-section">
+                        <div class="choose-section-inner">
+                            <i class="icon fa-solid fa-hotel"></i>
+                            <h3 class="choose-section-heading">Handpicked Hotels</h3>
+                            <p class="choose-section-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare<br>nulla amet et. Libero commodo sagittis dignissim adipiscing quis.<br>Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                    </div>
+                    <div class="choose-section-2 choose-section">
+                        <div class="choose-section-inner">
+                            <i class="icon fa-solid fa-earth-europe"></i>
+                            <h3 class="choose-section-heading">World Class Service</h3>
+                            <p class="choose-section-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare<br>nulla amet et. Libero commodo sagittis dignissim adipiscing quis.<br>Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="choose-lower-container">
+                    <div class="choose-section">
+                        <div class="choose-section-inner">
+                            <i class="icon fa-solid fa-tags"></i>
+                            <h3 class="choose-section-heading">Best Price Guarantee</h3>
+                            <p class="choose-section-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare<br>nulla amet et. Libero commodo sagittis dignissim adipiscing quis.<br>Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
