--- a/index.html
+++ b/index.html
@@ -136,6 +136,23 @@
                 </div>
             </div>
         </section>
+        <section class="saving-newsletter">
+            <div class="newsletter-container">
+                <div class="newsletter">
+                    <h3 class="newsletter-heading">Newsletter</h3>
+                    <p class="newsletter-description">Get your daily dose of travel news & tips. Sign<br>up today!</p>
+                    <hr>
+                    <form action="" class="news-letter-form">
+                        <input class="sub-text" type="text" name="" id="" placeholder="Name">
+                        <input class="sub-mail" type="email" name="" id="" placeholder="Email">
+                        <input class="sub-btn" type="submit" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+            <div class="saving-container">
+                
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
